--- a/Orchard-dev/src/Orchard.Web/Modules/Orchard.AntiSpam/Views/Admin/Index.cshtml
+++ b/Orchard-dev/src/Orchard.Web/Modules/Orchard.AntiSpam/Views/Admin/Index.cshtml
@@ -12,7 +12,7 @@
         pageSizes.Add(defaultPageSize);
     }
 }
-
+@*vkvkvkkvkvkvkvk*@
 <h1>@Html.TitleForPage(T("Manage Spam").ToString()) </h1>
 @using (Html.BeginFormAntiForgeryPost()) { 
     @Html.ValidationSummary()
